# chat-with-nerf

./: .gitignore  .gitmodules  colmap2nerf.py  colmap_viz.py  install_colmap.sh  killif.sh  pano2plane.py  pyproject.toml  run_chat.py  run_colmap.py
chat_with_nerf/: app.py  settings.py
chat_with_nerf/chat/: agent.py  grounder.py  session.py
chat_with_nerf/model/: model_context.py  scene_config.py
chat_with_nerf/visual_grounder/: captioner.py  picture_taker.py  visual_grounder.py
